	PR middle-end/39986 	* dfp.c (encode_decimal32, decode_decimal32, encode_decimal64, 	decode_decimal64, encode_decimal128, decode_decimal128): Avoid 	32-bit memcpy into long.

* gcc.dg/dfp/pr39986.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@147188 138bc75d-0d04-0410-961f-82ee72b054a4